--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    aaptOptions {
+        noCompress "tflite"
+        noCompress "lite"
+    }
 }
 
 dependencies {
@@ -34,7 +38,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.0.0'
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.3.0'
+    compile 'com.wonderkiln:camerakit:0.13.1'
+    compile 'org.tensorflow:tensorflow-lite:+'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
@@ -45,3 +51,9 @@ sceneform.asset('sampledata/Heart.obj',
         'default',
         'sampledata/Heart.sfa',
         'src/main/assets/Heart')
+
+
+sceneform.asset('sampledata/Water_Bottle_01.obj',
+        'default',
+        'sampledata/Water_Bottle_01.sfa',
+        'src/main/assets/Water_Bottle_01')
